assets/css/main.css
/* ... */
/* Modal styles */

body>a+div {
  height: 100%;
  width: 100%;
  top: -9999px;
  left: -9999px;
  opacity: 0;
  position: fixed;
  background: rgba(0, 0, 0, 0.6);
  display: grid;
  place-items: center center;
  transition: opacity var(--baseTime);
  z-index: 999;
}

body>div:target {
  opacity: 1;
  top: 0;
  left: 0;
}

body>div>a {
  position: fixed;
  z-index: -1;
  height: 100%;
  width: 100%;
}

body>div>a:after {
  content: '';
  transform: rotate(45deg);
  font-family: FontAwesome;
  font-size: 2em;
  position: absolute;
  right: 1em;
  top: 1em;
  color: white;
}

body>div>a:focus:after {
  color: var(--dBlue);
  animation: pop 2s infinite;
}

/* Modal trigger */

body>a {
  position: fixed;
  right: 0;
  top: 70%;
  background: var(--dBlue);
  padding: 1em 1.5em;
  border-radius: 10px 10px 0 0;
  transform: rotate(-90deg) translatey(-50%);
  transform-origin: right;
  color: var(--white);
  text-decoration: none;
  font-weight: 700;
  animation: slideIn 2s forwards;
}

body>a:focus,
body>a:hover {
  animation: slideIn 2s forwards;
  outline: none;
  background: var(--lBlue);
}

/* Modal content */

body>div>div {
  background: var(--white);
  width: 70%;
  max-width: 360px;
  border-radius: 10px;
  transform: translateY(100vh);
  transition: var(--baseTime);
}

body>div:target>div {
  transform: translateY(0);
}

body>div>div header {
  background: linear-gradient(45deg, var(--lBlue), var(--vdBlue));
  width: 120%;
  transform: translate(-10%, -10%) rotate(355deg);
  box-sizing: border-box;
  padding: 2em 4.5em;
  border-radius: 10px;
}

body>div>div header h2 {
  text-align: center;
  transform: rotate(5deg);
  color: var(--white);
  font-weight: 900;
}

body>div>div form {
  position: relative;
}

body>div>div form fieldset {
  padding: 0;
}

body>div>div form ul {
  list-style: none;
  display: grid;
  grid-gap: 1.8em;
  grid-template-columns: repeat(5, 1fr);
  position: absolute;
  top: -2.5rem;
  transform: translatex(-10%);
}

body>div>div form ul li input[type="radio"] {
  position: absolute;
  left: -999;
  top: -999;
  opacity: 0;
}

body>div>div form ul li input[type="radio"]:checked+label {
  filter: brightness(1);
}

body>div>div form ul li label {
  text-decoration: none;
  color: black;
  filter: brightness(.4);
  position: relative;
  transition: var(--baseTime);
}

body>div>div form ul li label img {
  height: 5rem;
}

body>div>div form ul li label:before {
  content: '';
  position: absolute;
  top: -5rem;
  left: 50%;
  transform: translatex(-50%);
  font-size: 1em;
  font-weight: 700;
  color: var(--white);
  word-wrap: nowrap;
}

body>div>div form ul li label:hover,
body>div>div form ul li input:focus+label {
  filter: brightness(1);
}

body>div>div form ul li:nth-child(1) label:hover:before,
body>div>div form ul li:nth-child(1) input[type="radio"]:checked+label:before,
body>div>div form ul li:nth-child(1) input[type="radio"]:focus+label:before {
  content: 'Terrible';
}

body>div>div form ul li:nth-child(2) label:hover:before,
body>div>div form ul li:nth-child(2) input[type="radio"]:checked+label:before,
body>div>div form ul li:nth-child(2) input[type="radio"]:focus+label:before {
  content: 'Bad';
}

body>div>div form ul li:nth-child(3) label:hover:before,
body>div>div form ul li:nth-child(3) input[type="radio"]:checked+label:before,
body>div>div form ul li:nth-child(3) input[type="radio"]:focus+label:before {
  content: 'Meh';
}

body>div>div form ul li:nth-child(4) label:hover:before,
body>div>div form ul li:nth-child(4) input[type="radio"]:checked+label:before,
body>div>div form ul li:nth-child(4) input[type="radio"]:focus+label:before {
  content: 'Good';
}

body>div>div form ul li:nth-child(5) label:hover:before,
body>div>div form ul li:nth-child(5) input[type="radio"]:checked+label:before,
body>div>div form ul li:nth-child(5) input[type="radio"]:focus+label:before {
  content: 'Amazing';
}

body>div>div form button {
  margin: 2rem auto 0 50%;
  transform: translate(-50%, 50%);
  width: auto;
  padding: 1em 2.5em;
}
body>div>div form button:focus {
  animation: none;
}

@media (max-width: 37em) {
  body>div>div header {
    padding: 2em 2em;
  }
  body>div>div form ul {
    left: 50%;
    transform: translatex(-50%);
    grid-gap: 1em;
  }
  body>div>div form ul li label img {
    height: 4rem;
  }
  body>div>div form ul li label:before {
    top: -4rem;
    font-size: 0.8em;
  }
  body>div>div form button {
    margin: 0rem auto 0 50%;
  }
}

/* Form styles */

a,
label {
  color: var(--lGrey);
}

.login+body nav+div {
  max-width: 80%;
  height: 70vh;
  margin: 1em auto;
  display: grid;
  grid-template-columns: 2fr 1fr;
  grid-template-rows: 1fr 1fr;
  grid-gap: 1em;
}

.login+body section {
  background: url("../images/smoke.jpeg");
  background-size: cover;
  background-position: bottom;
  box-shadow: 0 0px 3px 0px rgba(0, 0, 0, 0.2);
  display: grid;
  align-content: end;
  padding: 4em;
  grid-row: span 2;
  position: relative;
}

.login+body section:before {
  content: '';
  position: absolute;
  top: calc(50% - 1em);
  left: calc(50% - 1em);
  width: 3rem;
  height: 3rem;
  background: url("../images/loader.png");
  background-position: 0 0;
  background-size: cover;
  animation: loader 800ms infinite steps(6);
  text-indent: 999px;
  overflow: hidden;
  z-index: -1;
}

@media (max-width: 81em) {
  .login+body nav+div {
    grid-template-columns: 100%;
    grid-template-rows: 25em 1fr;
    max-width: 95%;
  }
  .login+body section {
    background-position: center;
  }
}

@media (max-width: 37em) {
  .login+body nav+div {
    margin-top: 0;
  }
  .login+body section {
    padding: 2em;
  }
}

.login+body section h1,
.login+body section p {
  color: var(--white);
  margin: 1em 0 0 0;
}

.login+body nav+div:nth-of-type(1) form {
  background: var(--offWhite);
  padding: 3em 2em 2em 2em;
  box-shadow: 0 0px 3px 0px rgba(0, 0, 0, 0.2);
  height: auto;
}
/* ... */

